
File ADVANCED has been updated with the following information:
1. Results of testing sdelta with the standard dictionary file 
on a large corpus of source tarballs and the problems and
benfits of using generic dictionary patching.
2. Potential use of 7zip high compression technology with sdelta 
technology and it's current savings over bzip2 for compressing a 
large and mostly compressible Sorcerer Install/Rescue ISO9660 image.


Wed Dec  8 00:03:12 UTC 2004	20041208	Kyle Sallee
Pavel Gorshkov <svinn@gmx.net> provided a patch for
adler32.h that corrects endian detection on Solaris.
Problem with malloc and realloc on BSD may cause 
problems creating and using large sdelta patches
and creates a signifigant performance degredation 
over sdelta on linux.  To avoid the problem one may
want to install libdlmalloc from /usr/ports/devel/libdlmalloc
and then gcc -O2 -pipe *.c -ldlmalloc -lmhash -o sdelta
or export LD_PRELOAD=/usr/lib/libdlmalloc.so prior to
running sdelta.


Fri Dec 17 21:50:18 UTC 2004	20041217	Kyle Sallee
Implemented changes for accepting input of sdelta patch
and dictionary file on command line for faster application
of sdelta patches on FreeBSD.  However the changes provide
negligible speed improvement on linux.

Thanks goes to Pavel Gorshkov <svinn@gmx.net> for finding
that successive calls to realloc on FreeBSD even with an
alternate malloc is far slower than a malloc.


Fri Dec 31 20:39:52 UTC 2004	20041231	Kyle Sallee
Made changes and improvements resulting in 
30% speed increase in sdelta patch generation.
# make bsd
now compiles the source with the correct 
library links for use on FreeBSD.

Sat Jan  1 21:57:59 UTC 2005	20040101	Kyle Sallee
Made changes and improvements resulting in
25% speed increase in sdelta patch generation
over the previous day's release.
Very large files will result in less swap 
thrashing during sdelta patch generation.
Compressed size of sdelta patches may either 
increase or decrease a little due to these changes.